# bateau-ais-report

./: .gitignore  Makefile  build-wsl.sh  create-template.sh  defaults.yaml  eisvogel-author-spacing.patch  flake.nix
.github/workflows/: build-and-release.yml
src/: Analyse_besoin_marche.md  Analyse_fonctionnelle.md  Analyse_retentissement.md  Contexte_et_besoins.md  Matrice RACI.md  Matrice_RACI.md  analyse_evaluation.md  archi_technique.md  disable_float.tex  etat_de_lart.md  main.md  mise_en_oeuvre.md  poc.md  refs.bib  refs.yaml  travaux_futurs.md
template/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
template/app/: __init__.py  main.py
template/tests/: __init__.py  test_main.py
